add setting tab

--- a/cljs-src/resources/_locales/en/messages.json
+++ b/cljs-src/resources/_locales/en/messages.json
@@ -189,6 +189,7 @@
         "content": "$1"
       }
     }
-  }
+  },
+  "titleGlobalSwitch": {"message" : "Master Switch"},
+  "tabSetting": {"message" : "Settings" }
 }
-
