--- a/cljs-src/resources/_locales/zh_CN/messages.json
+++ b/cljs-src/resources/_locales/zh_CN/messages.json
@@ -189,5 +189,7 @@
         "content": "$1"
       }
     }
-  }
+  },
+  "titleGlobalSwitch": {"message" : "全局开关"},
+  "tabSetting": {"message" : "设置" }
 }
